Fix scrollbar issue

--- a/client/modules/task/css/task.css
+++ b/client/modules/task/css/task.css
@@ -2,12 +2,14 @@ app-project-task-list{
 	width:100%;
 	height:100%;
 }
-
+app-project-task-list .task-not-found-content
+{
+	overflow-y:hidden;
+}
 app-project-task-list .task-not-found{
 	width:300px;
 	height:300px;
 	font-size:250px;
-	overflow-y:hidden;
 }
 app-project-task-list .task-not-found div{
 	font-size:35px;
